--- a/livre.html
+++ b/livre.html
@@ -3,30 +3,57 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Rappel javascript</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div class="container">
-      <h1>Application de gestion</h1>
-      <button class="btn btn-success">Ajouter un livre</button>
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">titre</th>
-            <th scope="col">auteur</th>
-            <th scope="col">prix</th>
+      <div>
+        <h1>Application de gestion de livres</h1>
+        <button class="btn btn-success" id="btnAjout">Ajouter un livre</button>
+        <table class="table table-striped" id="tab1">
+          
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Titre</th>
+                <th scope="col">Auteur</th>
+                <th scope="col">Prix</th>
+                <th scope="col">Editer</th>
+                <th scope="col">Supprimer</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
           </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
+        </table>
+      </div>
+      <div id="formAjout" class="hide">
+        <h2>Ajouter un nouveau livre</h2>
+        <form id="addForm">
+          <div class="mb-3">
+            <label for="titre" class="form-label">Titre</label>
+            <input type="text" class="form-control" id="titre" />
+          </div>
+          <div class="mb-3">
+            <label for="auteur" class="form-label">Auteur</label>
+            <input type="text" class="form-control" id="auteur" />
+          </div>
+          <div class="mb-3">
+            <label for="prix" class="form-label">Prix</label>
+            <input type="text" class="form-control" id="prix" />
+          </div>
+          <button type="submit" class="btn btn-primary">Valider</button>
+          <button type="reset" class="btn btn-danger">Réinitialiser</button>
+        </form>
+      </div>
     </div>
+
     <script src="livre.js"></script>
   </body>
 </html>
